<resources>
    <string name="app_name">Battle Ships +</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="one_app_game">Игра на одном устройстве</string>
    <string name="online_game">Сетевая игра</string>
    <string name="settings">Настройки</string>
    <string name="main_menu">Главное меню</string>
    <string name="pre_game">Расстановка кораблей</string>
    <string name="game">Игра</string>
    <string name="test">тест</string>
    <string name="join">Присоединиться</string>
    <string name="add_new_lobby">Создать лобби</string>
    <string name="all_lobby">Все лобби</string>
    <string name="shop">Магазин</string>
    <string name="a">A</string>
    <string name="b">Б</string>
    <string name="v">B</string>
    <string name="g">Г</string>
    <string name="d">Д</string>
    <string name="e">Е</string>
    <string name="j">Ж</string>
    <string name="z">З</string>
    <string name="i">И</string>
    <string name="k">К</string>
    <string name="l">Л</string>
    <string name="m">М</string>
    <string name="ready">Готов</string>
    <string name="exit">Выход</string>
    <string name="lobby_settings">Настройки комнаты</string>
    <string name="capitulate">Сдаться</string>
    <string name="fire">Огонь</string>
    <string name="switch_to_enemy_field">Переключить на поле противника</string>
    <string name="switch_to_your_field">Переключить на своё поле</string>
    <string name="ok">OK</string>
    <string name="game_end">Конец игры</string>
    <string name="winner_message">Вы победили!</string>
    <string name="looser_message">Вы проиграли</string>
    <string name="steps">Ходы</string>
    <string name="enemy_steps">Ходы противника</string>
    <string name="exit_error">Вы хотите покинуть игру?</string>
    <string name="exit_error_pve">Если покинуть игру сейчас, то результат будет потерян</string>
    <string name="exit_error_pvp">Если покинуть игру сейчас, то будет засчитан проигрыш</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="connection_lost">Нет соединения</string>
    <string name="connection_lost_message">Отсутствует соединеения с сервером</string>
    <string name="user_nikname">Имя игрока</string>
    <string name="enter_nikname">введите имя игрока</string>
    <string name="sound">Звуки</string>
    <string name="music">Музыка</string>
    <string name="create_lobby_question">Создать комнату?</string>
    <string name="create_lobby_message">Вы хотите создать свою комнату? Другие игроки смогут к ней присоедениться, чтобы сыграть с вами</string>
    <string name="enemy_not_ready">Противник не готов</string>
    <string name="cancel">Отмена</string>
    <string name="wait_other_player">Ожидание другого игрока</string>
    <string name="wait_other_player_message">Как только другой игрок присоеденится к комнате начнётся игра</string>
    <string name="lobby_owerflow">Комната занята или удалена</string>
    <string name="wait_enemy_turn">Ожидание хода прротивника</string>
    <string name="wait_enemy_turn_message">Сейчас ход другого игрока, подождите, пока он сходит</string>
</resources>
