<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Lobby.LobbyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_weight="3"
                android:text="@string/all_lobby"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/text1"
                android:layout_toLeftOf="@+id/layout1"
                android:layout_toRightOf="@+id/text1"
                android:layout_toStartOf="@+id/layout1"
                android:layout_weight="1"
                android:src="@mipmap/ic_launcher_round" />

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:orientation="vertical">

                <me.grantland.widget.AutofitTextView
                    android:id="@+id/AutofitTextView_nik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="NikName"
                    android:textAllCaps="false"
                    app:fontFamily="serif" />

                <TextView
                    android:id="@+id/textView_reiting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="1234" />
            </LinearLayout>

        </LinearLayout>

        <fragment
            android:id="@+id/fragment_lobby_list"
            android:name="com.tokovoynr.battleships.UI.Lobby.ListFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:baselineAligned="false"
            android:minHeight="350dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_room_settings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lobby_settings" />

            <Button
                android:id="@+id/button_new_lobby"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_new_lobby" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>